--- a/1. Image-enhancement.md
+++ b/1. Image-enhancement.md
@@ -6,8 +6,59 @@
 * HSI : 영상 인식에서 많이 사용되는 방식 <Hue(색조), Saturation(순도), Intensity(밝기)>
 * YIQ : 영상 압축에서 많이 사용되는 방식
 
+<br>
 
-# Contrast enhancing
+# 1) Contrast enhancing
+## Point Processing
+<input nonlinear image> 
+
+### 1-1) Arithmetic/logic operations
+* 화소값에 일정한 상수를 더하고, 빼고, 곱하고, 나누는 연산
+  * +, - : 영상의 밝기를 밝게하거나 어둡게
+  * *, / : 영상의 명암대기를 높이거나 낮춤
+* Problem : 음수 또는 화소가 가지는 최댓값보다 큰 값이 출력가능
+* Solving : 음수는 0, 255보다 큰 값은 255로 설정 Clamping
+<input operation image>
+<br>
+
+### 1-2) Power-law transformations
+<input Power-law transformations image>
+γ > 1 : 영상이 전체적으로 어두어짐<br/>
+γ < 1 : 영상이 전체적으로 밝아짐
+<br>
+<br>
+
+### 1-3) Contrast stretching
+* Contrast : 가장 어두운 영역으로부터 가장 밝은 영역의 범위<br/>
+ $$Contrast = L_{max} - L_{min} / L_{max} + L_{min} $$
+* Mach Band: 서로 다른 광도가 인접해 있는 경우 발생하는 효과<br/>
+  * 광도가 급격히 변화하는 경계부분을 강조하여 보는 경향
+<br>
+
+#### 1-3-1) Basic contrast stretching
+* 특정 부분, 중앙에 명암 값이 편향된 히스토그램을 가진 영상에 잘 적용
+* 모든 범위의 화소값을 포함하도록 영상을 확장<br/>
+  $$\text{new pixel} = \frac{{\text{old pixel} - \text{low}}}{{\text{high} - \text{low}}} \times 255 $$
+
+* 낮은 명암대비를 가진 영상의 질을 향상시킬 수 있는 유용한 도구로써, Gaussian dst를 가질때 가장 잘 적용
+<input contrast stretching image>
+<br>
+
+#### 1-3-2) Ends-in search
+* 모든 범위의 명암값을 갖지만, 히스토그램의 특정 부분에 화소들이 치우친 영상에 잘 적용
+  * 일정한 양의 화소를 흰색 또는 검은색을 갖도록 지정
+  * low : 낮은 범위에서의 지정한 양 이후의 pixel intensity
+  * high : 높은 범위에서 지정한 양 이후의 pixel intensity
+#### 1-3-3) Simple transformation function
+<br>
+
+#### 1-3-4) Histogram processing
+<br>
+
+### 1-4) Histogram equalization
+ 
+
+
 # Noise Filtering
 # Smoothing
 # Morphological Operator
