Update and rename 1. Image-enhancement.md to 1.Image-enhancement.md

--- a/1.Image-enhancement.md
+++ b/1.Image-enhancement.md
@@ -49,16 +49,47 @@
   * 일정한 양의 화소를 흰색 또는 검은색을 갖도록 지정
   * low : 낮은 범위에서의 지정한 양 이후의 pixel intensity
   * high : 높은 범위에서 지정한 양 이후의 pixel intensity
-#### 1.3.3) Simple transformation function
-<br>
 
-#### 1.3.4) Histogram processing
+<br>
 <br>
 
 ### 1.4) Histogram equalization
- 
+* Two requirements on the operator are
+    * 출력값은 grey level (0~255) 값을 사용해야 한다.
+    * 각각의 픽셀은 치우치지 않고, 균등하게 분포해야 한다.
+
+* Process
+    * 히스토그램에 입력 이미지를 넣는다.
+    * 정규화 연산을 통해 look-up table을 만든다.
+      $$\text{Normalization} = \frac{\text{max grey level}}{\text{the number of total grey levels}}$$
+    * 
 
 
 # Noise Filtering
+* Common types of noise
+    * Salt and pepper noise : 이미지에 무작위로 흰색가 검은색의 점들이 나타나는 현상
+    * Impulse noise : 밝거나 어두운 픽셀로, 랜덤하게 나타하는 현상
+    * Gaussian noise : 가우시안 정규 분포를 따르는 통계적인 노이즈
+<br>
+
+* Mask
+    * 그림
+<br>
+
+* Convolution
+    * <그림 설명>
+    *  
+    * Convolution operation
+        * 필터가 이미지에 적용되기 전에 수평 및 수직으로 뒤집히는 상호 상관
+        * 입력이미지 F와 커널 H 간의 합성곱 연산을 수행
+  $$G[i,j] = \sum_{m=-k}^{k}\sum_{n=-k}^{k} H[u, v] \cdot F[i-u, j-v]$$
+
+* Kernel
+    * 가중치에 따라 다른 결과를 생성함
+         * Convolution mask summed == 1 : 원본 이미지와 같은 intensity를 유지
+         * Convolution mask summed == 0 : edge detection, 이미지 경계를 강조
+
+
+p54
 # Smoothing
 # Morphological Operator
